--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jspdf": "^4.2.0",
     "lucide-react": "^0.462.0",
